--- a/blog/styles.css
+++ b/blog/styles.css
@@ -61,3 +61,38 @@ body {
     display: inline-block;
     padding: 10px 0
 }
+
+.blog-title .right-column img{
+ width: 22px;
+}
+
+
+/* BLOG CONTENT LAYOUT */
+.blog-content {
+    width: 100%;
+    margin-top: 40px;
+}
+
+.blog-content .blog-row {
+    margin-bottom: 30px;
+}
+
+.blog-content .column {
+    width: 50%;
+    margin-right: 22px;
+    border-top: 4px solid #d9d9d9;
+    border-radius: 4px;
+    padding: 20px 15px;
+}
+
+.blog-content .column:last-child{
+    margin-right:  0;
+}
+
+.blog-content .column .category-one {
+    display: block;
+    color: var(--primary-color);
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
