--- a/blog/styles.css
+++ b/blog/styles.css
@@ -96,3 +96,18 @@ body {
     margin-bottom: 10px;
 }
 
+
+.blog-content .column .category-two {
+    display: block;
+    color: var(--secondary-color);
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+.blog-content .column .date {
+    display: block;
+    color: #8c8f89;
+    font-size: 12px;
+    margin-bottom: 10px;
+}
+
