--- a/blog/styles.css
+++ b/blog/styles.css
@@ -79,8 +79,8 @@ body {
 
 .blog-content .column {
     width: 50%;
-    margin-right: 22px;
-    border-top: 4px solid #d9d9d9;
+    margin: 22px;
+    border: 4px solid #d9d9d9;
     border-radius: 4px;
     padding: 20px 15px;
 }
@@ -111,3 +111,44 @@ body {
     margin-bottom: 10px;
 }
 
+.blog-content .column h2 {
+    font-size: 28px;
+    margin: 0;
+    padding: 0;
+
+}
+
+.blog-content .column p {
+    font-size: 15px;
+    margin: 0;
+    padding: 0;
+    font-weight: 400;
+
+}
+
+.blog-content .column a {
+    color: var(--primary-color);
+    font-size: 14px;
+    margin-bottom: 10px;
+    display: block;
+    margin-top: 30px
+}
+
+footer {
+    background: #E5E7E9;
+    width: 100%;
+    padding: 40px 0;
+    text-align: center;
+}
+
+footer .footer-copyright {
+    color: #808B96;
+    margin: 0;
+    padding-bottom: 15px;
+
+}
+
+footer .footer-copyright a {
+    color: var(--primary-color);
+    font-size: 16px;
+}
