--- a/blog/styles.css
+++ b/blog/styles.css
@@ -24,7 +24,7 @@ body {
 }
 
 .container {
-    max-width: 1140px;
+    max-width: 1120px;
     margin: 0 auto;
 }
 
@@ -66,11 +66,10 @@ body {
  width: 22px;
 }
 
-
-/* BLOG CONTENT LAYOUT */
 .blog-content {
-    width: 100%;
+    width: 80%;
     margin-top: 40px;
+    margin: 0 auto;
 }
 
 .blog-content .blog-row {
@@ -79,7 +78,7 @@ body {
 
 .blog-content .column {
     width: 50%;
-    margin: 22px;
+    margin: 10px;
     border: 4px solid #d9d9d9;
     border-radius: 4px;
     padding: 20px 15px;
