1. add header 2. style title 3. style anchor tags 4. style button groups 5. style footer

--- a/blog/styles/index.css
+++ b/blog/styles/index.css
@@ -24,7 +24,7 @@ body {
 }
 
 .container {
-    max-width: 1120px;
+    max-width: 80%;
     margin: 0 auto;
 }
 
@@ -67,7 +67,7 @@ body {
 }
 
 .blog-content {
-    width: 80%;
+    width: 80vw;
     margin-top: 40px;
     margin: 0 auto;
 }
