--- a/blog/styles/blogpost.css
+++ b/blog/styles/blogpost.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
+
+:root {
+  --primary-color: #4285f4;
+  --secondary-color: #808B96;
+}
+
 .blog-post-wrapper {
     padding: 16px;
     max-width: 80vw;
@@ -16,7 +22,7 @@
     text-decoration: underline;
 }
 .blog-post-header a {
-    color: #808B96
+    color: var(--primary-color);
 }
 
 img {
@@ -28,22 +34,22 @@ img {
 }
 
 .btn-group a {
-    border: 1px solid #aaa;
+    border: 1px solid var(--secondary-color);
     padding: 6px 10px;
     display: inline-block;
     border-radius: 50px;
-    color: #aaa;
+    color: var(--secondary-color);
     text-decoration: none;
 }
 
 .btn-group a.active {
-   color: #4285f4;
-   border-color: #4285f4;
+   color: var(--primary-color);
+   border-color: var(--primary-color);
 }
 
 .btn-group a.nonactive {
-   color: #aaa;
-   border-color: #aaa4;
+   color: var(--secondary-color);
+   border-color: var(--secondary-color);
 }
 
 .blog-post-content .blog-post-left h1{
@@ -51,11 +57,11 @@ img {
 }
 
 .blog-post-date {
-    color: #aaa
+    color: var(--secondary-color);
 }
 
 .blog-post-left a {
-    color: #4285f4
+    color: var(--primary-color);
 }
 
 .blog-post-left a:hover{
@@ -63,7 +69,7 @@ img {
 }
 
 p.border{
-    border: 2px solid #aaa;
+    border: 2px solid #d3d3d3;
 }
 
 .blog-post-about {
@@ -93,7 +99,7 @@ p.border{
 }
 
 .blog-post-archive a{
-    color: #4285f4;
+    color: var(--primary-color);
    
 }
 
@@ -109,7 +115,7 @@ ul {
 
 
 .blog-post-elsewhere a {
-    color: #4285f4;
+    color: var(--primary-color);
     
 }
 
@@ -117,14 +123,22 @@ ul {
     text-align: center;
     background: #f9f9f9;
     padding: 16px;
-    color: #aaa;
+    color: var(--secondary-color);
     margin-top: 50px;
 
 }
 
 .go-home {
     text-decoration: none;
-    color: #808B96
+    color: var(--secondary-color)
+}
+
+.footer-container a {
+    color: var(--primary-color)
+}
+
+.blog-post-header .subscribe{
+    color: var(--secondary-color)
 }
 @media (min-width: 768px) {
     .blog-post-content {
